
<resources>
    <string name="tip_force_offline">您的账号已在其他地方登陆</string>
    <string name="app_name">方太直播购</string>
    <string name="dianbo">点播</string>
    <!--标题栏-->
    <string name="title_back">返回</string>
    <string name="my_account">我的账户</string>
    <!--我的账户-->
    <string name="my_order">我的订单</string>
    <string name="check_all_orders">查看所有订单</string>
    <string name="wait_pay">待付款</string>
    <string name="wait_shipments">待发货</string>
    <string name="wait_receipt">待收货</string>
    <string name="deal_is_done">交易完成</string>
    <string name="my_coupons">我的优惠券</string>
    <string name="my_collections">我的收藏</string>
    <string name="message_center">消息中心</string>
    <string name="point_center">积分中心</string>
    <string name="my_address">我的收货地址</string>
    <string name="all">全部</string>
    <string name="order_number">订单号：</string>
    <string name="order_money">订单金额：</string>
    <string name="information">详情</string>
    <string name="live_or_demand">直播/点播</string>
    <string name="goods">商品</string>
    <string name="goto_info">查看详情</string>
    <string name="living">正在直播</string>
    <string name="will_living">即将开始</string>
    <string name="living_over">直播完毕</string>
    <string name="vod">点播</string>
    <string name="wait_use">可使用</string>
    <string name="disabled">已失效</string>
    <string name="fotile_ec">方太电商</string>
    <string name="use_rule">使用规则</string>
    <string name="test_describe">1.看我我手指放松\n2.我目光如龙\n3.当敌人是空</string>
    <string name="user_name">用户名</string>
    <string name="user_phone">手机号</string>
    <string name="user_password">密码</string>
    <string name="new_password">新密码</string>
    <string name="old_password">旧密码</string>
    <string name="user_password_sure">确认密码</string>
    <string name="new_password_sure">确认新密码</string>
    <string name="please_set_user_name">请输入用户名</string>
    <string name="please_set_user_phone">请输入手机号</string>
    <string name="please_set_user_pwd">请输入新密码</string>
    <string name="please_set_old_pwd">请输入旧密码</string>
    <string name="please_set_user_pwd_sure">请再次输入新密码</string>
    <string name="ok">完&#x0020;&#x0020;&#x0020;&#x0020;成</string>
    <string name="had_ok">已完成</string>
    <string name="consignee">收货人：</string>
    <string name="delivery_address">收货地址：</string>
    <string name="postcode">邮编：</string>
    <string name="leave_a_message">留言：</string>
    <string name="commit_order">提交订单</string>
    <string name="pay_time">付款时间</string>
    <string name="shipments_time">发货时间</string>
    <string name="receipt_time">收货时间</string>
    <string name="goods_amount">商品金额</string>
    <string name="freight">运费</string>
    <string name="coupons_amount">优惠金额</string>
    <string name="order_amount">订单金额</string>
    <string name="pay_way">支付方式</string>
    <string name="order_leave_message">订单留言</string>
    <string name="logistics_company">物流公司：</string>
    <string name="waybill_number">运单编号：</string>
    <string name="modify_user_info">修改个人资料</string>
    <string name="order_money_">订单金额</string>
    <string name="point_money">积分抵扣金额</string>
    <string name="order_info">订单详情</string>
    <string name="all_point">全部积分</string>
    <string name="used_point">已用积分</string>
    <string name="usable_point">可用积分</string>
    <string name="point_info">积分明细</string>
    <string name="my_point">我的积分</string>
    <string name="rmb">￥ </string>
    <!--登录注册-->

    <string name="login_">登录</string>
    <string name="phone_num">手机号</string>
    <string name="password">密码</string>
    <string name="register_">注&#160;&#160;&#160;&#160;册</string>
    <string name="verification_code">验证码</string>
    <string name="send_verification_code">发送验证码</string>
    <string name="next">下一步</string>
    <string name="setNewPwd">设置新密码</string>
    <string name="sureNewPwd">确认新密码</string>
    <string name="submit">提&#160;&#160;&#160;&#160;交</string>
    <!--首页-->
    <string name="shouye">首页</string>
    <string name="zhibo">直播</string>
    <string name="gouwuche">购物车</string>
    <string name="wode">我的</string>
    <string name="title_decorate">装修大课堂</string>
    <string name="title_ad">创意广告</string>
    <string name="title_vedio">产品视频</string>

    <!--登录注册-->
    <string name="phone">手机号</string>
    <string name="passward">密码</string>
    <string name="login">登&#x0020;&#x0020;录</string>
    <string name="register">注册</string>
    <string name="forget_pwd">忘记密码？</string>
    <string name="title_activity_login">LoginActivity</string>
    <!--直播、点播-->
    <string name="total_products">查看全部商品</string>
    <string name="receive_coupon">领取优惠券</string>
    <string name="product_detail">查看详情</string>
    <string name="live_message">消息</string>
    <string name="live_introduce">介绍</string>
    <string name="live_see_buy">边看边买</string>
    <string name="send_comment">发评论</string>
    <string name="send_barrage">发弹幕</string>
    <string name="show_total_msg">查看全部消息</string>
    <string name="show_govenment_msg">只看官方消息</string>
    <!-- msgadapter -->
    <item type="id" name="tag_first"></item>
    <item type="id" name="tag_second"></item>
    <string name="youhuijia">优惠价</string>
    <string name="cankaojia">参考价：</string>
    <string name="all_buy">大家都在买</string>
    <string name="add_cart">加入购物车</string>
    <string name="buy_now">立即购买</string>
    <string name="jixuhuadong">继续滑动，查看商品详情</string>
    <string name="hotproduct">热销商品</string>
    <string name="guige">规格</string>
    <string name="shuliang">数量</string>
    <string name="queding">确定</string>

    <!--购物车-->
    <string name="shopping_cart">购物车</string>
    <string name="shopping_cart_is_null">您的购物车是空的</string>
    <string name="bulk_operation">批量操作</string>
    <string name="goods_price">商品金额：</string>
    <string name="settlement">结算</string>
    <string name="add">＋</string>
    <string name="subtract">－</string>
    <string name="shipping_address">收货地址</string>
    <string name="add_address">添加新地址</string>
    <string name="default_address">默认地址</string>
    <string name="add_shipping_address">添加收货地址</string>
    <string name="modify_shipping_address">编辑收货地址</string>
    <string name="compile">编辑</string>
    <string name="delete">删除</string>
    <string name="name">姓名</string>
    <string name="phoneNum">手机号</string>
    <string name="province_city_region">省市区</string>
    <string name="address_info">详细地址</string>
    <string name="postcode_">邮政编码</string>
    <string name="hint_name">请输入姓名</string>
    <string name="hint_address_info">请输入详细的地址</string>
    <string name="hint_postcode">请输入邮政编码</string>
    <string name="sure_">确 认</string>
    <string name="coupons_code">优惠码</string>
    <string name="weChat_pay">微信支付</string>
    <string name="pay_on_delivery">货到付款</string>
    <string name="leave_message_info">可填写您与卖家达成的一致的要求</string>
    <string name="standard">规格</string>
    <string name="standard_">规格：</string>
    <string name="number">数量</string>
    <string name="pay_successful">支付成功</string>
    <string name="pay_fail">支付失败</string>
    <string name="pay_price">支付金额：</string>
    <string name="we_all_buy">大家都在买</string>
    <string name="pay_fail_msg">个人账户支付失败\n请稍后再付款</string>
    <string name="sure_order">订单确认</string>
    <string name="hint_point">输入本次使用积分，1积分为1元</string>
    <string name="choice_coupon">选择优惠券</string>
    <string name="no_coupons">目前没有可用的优惠券</string>
    <string name="shop_empty">您的购物车是空的哟</string>
</resources>
