<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/hui_bg">

    <include layout="@layout/item_base_title" android:id="@+id/base_title"></include>

    <include layout="@layout/item_underline_long_hui_line"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            style="@style/my_word_14_gray_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/name"/>
        <EditText
            android:id="@+id/et_write_name"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/hint_name"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            style="@style/my_word_14_gray_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/user_phone"/>
        <EditText
            android:id="@+id/et_write_phone"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/please_set_user_phone"
            android:inputType="phone"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>
    <RelativeLayout
        android:id="@+id/rl_province_city"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            style="@style/my_word_14_gray_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/province_city_region"/>
        <TextView
            android:id="@+id/tv_province_city"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="40dp"
            android:gravity="center_vertical"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/user_icon_arrow_right_gray"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="20dp"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            style="@style/my_word_14_gray_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/address_info"/>
        <EditText
            android:id="@+id/et_address"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/hint_address_info"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            style="@style/my_word_14_gray_style"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/postcode_"/>
        <EditText
            android:id="@+id/et_postcode"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:background="@null"
            android:hint="@string/hint_postcode"
            android:inputType="number"
            android:maxLength="6"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_sure"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/red"
            android:textColor="@color/white"
            style="?android:attr/borderlessButtonStyle"
            android:text="@string/sure_"
            android:textSize="14sp"/>
    </RelativeLayout>

</LinearLayout>
