<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/hui_bg">

    <include layout="@layout/item_base_title" android:id="@+id/base_title"></include>

    <include layout="@layout/item_underline_long_hui_line"></include>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/user_name"/>
        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:gravity="right|center_vertical"
            android:maxLength="24"
            android:background="@null"
            android:hint="@string/please_set_user_name"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/user_phone"/>
        <TextView
            android:id="@+id/tv_phoneNum"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:gravity="right|center_vertical"
            android:inputType="phone"
            android:maxLength="11"
            android:background="@null"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/old_password"/>
        <EditText
            android:id="@+id/et_old_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:gravity="right|center_vertical"
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/please_set_old_pwd"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/new_password"/>
        <EditText
            android:id="@+id/et_password"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:gravity="right|center_vertical"
            android:inputType="textPassword"
            android:background="@null"
            android:hint="@string/please_set_user_pwd"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:layout_marginTop="1dp">
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="14sp"
            android:textColor="@color/black"
            android:layout_centerVertical="true"
            android:layout_marginLeft="20dp"
            android:text="@string/new_password_sure"/>
        <EditText
            android:id="@+id/et_password_again"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="90dp"
            android:layout_marginRight="20dp"
            android:inputType="textPassword"
            android:gravity="right|center_vertical"
            android:background="@null"
            android:hint="@string/please_set_user_pwd_sure"
            android:textSize="14sp"
            android:textColor="@color/hui_text"/>
    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1">
        <Button
            android:id="@+id/btn_over"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_alignParentBottom="true"
            android:background="@color/red"
            android:textColor="@color/white"
            android:text="@string/ok"
            android:textSize="14sp"/>
    </RelativeLayout>

</LinearLayout>
