<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/my_bg"
    android:orientation="vertical">

    <include
        android:id="@+id/base_title"
        layout="@layout/base_title" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"></RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_phonenum_findpwd"
            style="@style/register_14_style"
            android:background="@drawable/shape_register"
            android:hint="@string/phone_num"
            android:inputType="number"/>

        <LinearLayout
            android:id="@+id/linlayout_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <EditText
                android:id="@+id/et_yanzm_findpwd"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginTop="15dp"
                android:layout_weight="4"
                android:background="@drawable/shape_register"
                android:hint="@string/verification_code"
                android:inputType="number"
                android:paddingLeft="20dp"
                android:paddingRight="0dp"
                android:textSize="14sp" />

            <Button
                android:id="@+id/btn_send_findpwd"
                android:layout_width="0dp"
                android:layout_height="40dp"
                android:layout_marginLeft="20dp"
                android:layout_marginTop="15dp"
                android:layout_weight="3"
                android:background="@drawable/shape_register_black"
                android:gravity="center"
                android:text="@string/send_verification_code"
                android:textColor="@color/white"
                android:textSize="14sp" />
        </LinearLayout>

        <Button
            android:id="@+id/btn_next_findpwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="15dp"
            android:background="@drawable/shape_button_register"
            android:gravity="center"
            android:text="@string/next"
            android:textColor="@color/white"
            android:textSize="14sp" />

    </LinearLayout>

</LinearLayout>
