<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/my_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/base_title"
        layout="@layout/base_title" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3" >
    </TextView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="5"
        android:orientation="vertical"
        android:layout_marginRight="60dp"
        android:layout_marginLeft="60dp">

        <EditText
            android:id="@+id/et_setNewPwd"
            style="@style/register_14_style"
            android:background="@drawable/shape_register"
            android:hint="@string/setNewPwd"
            android:singleLine="true"
            android:password="true"
            android:inputType="textPassword" >

        </EditText>

        <EditText
            android:id="@+id/et_sureNewPwd"
            style="@style/register_14_style"
            android:background="@drawable/shape_register"
            android:singleLine="true"
            android:password="true"
            android:hint="@string/sureNewPwd"
            android:inputType="textPassword" />

        <Button
            android:id="@+id/btn_submit"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/shape_button_register"
            android:gravity="center"
            android:text="@string/submit"
            android:textColor="@color/white"
            android:textSize="14sp" />
        
    </LinearLayout>

</LinearLayout>