<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">
   <FrameLayout
       android:layout_width="match_parent"
       android:layout_height="250dp">
       <com.tencent.rtmp.ui.TXCloudVideoView
           android:id="@+id/video_view"
           android:layout_width="match_parent"
           android:layout_height="match_parent"
           />



   </FrameLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:orientation="horizontal">
        <TextView
            android:id="@+id/tv_live_message"
        android:layout_width="0dp"
        android:layout_weight="1"
        android:text="@string/live_message"
        android:gravity="center"
        android:layout_height="match_parent" />
        <TextView
            android:id="@+id/tv_live_indroduce"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:text="@string/live_introduce"
            android:gravity="center"
            android:layout_height="match_parent" />
        <TextView
            android:layout_width="0dp"
            android:layout_weight="1"
            android:id="@+id/tv_live_buy"
            android:text="@string/live_see_buy"
            android:gravity="center"
            android:layout_height="match_parent" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:id="@+id/ll_live_index"
        android:background="@color/hui_bg"
        android:orientation="horizontal">
       
    </LinearLayout>
<FrameLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:id="@+id/live_fragment_container"></FrameLayout>

</LinearLayout>